<resources>
    <string name="app_name">Experiments</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="title2">Title</string>
    <string name="description2">Description</string>
    <string name="save">save</string>
    <string name="notes">Notes</string>
    <string name="contacts">Contacts</string>
    <string name="name">Name</string>
    <string name="contact">Contact</string>
    <string name="notess">Notes</string>
    <string name="contactss">Contacts</string>
    <string name="change">change</string>
    <string name="title234">Title</string>
    <string name="description234">Description</string>
    <string name="images">Images</string>
</resources>