<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:id="@+id/container"
    android:gravity="center_horizontal"
    android:background="#EAECFF"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.addNote.AddNote">

    <EditText
        android:padding="10dp"
        android:layout_marginTop="150dp"
        android:hint="@string/title2"
        android:layout_marginHorizontal="22sp"
        android:id="@+id/edTitle"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>


    <EditText
        android:padding="10dp"
        android:hint="@string/description2"
        android:id="@+id/edDescription"
        android:layout_margin="22sp"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <com.google.android.material.button.MaterialButton
        android:layout_marginTop="50dp"
        android:insetBottom="0dp"
        android:insetTop="0dp"
        app:cornerRadius="12dp"
        android:backgroundTint="#E1D171"
        android:text="@string/save"
        android:textSize="20sp"
        android:paddingHorizontal="50dp"
        android:id="@+id/btnSaveNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
</LinearLayout>